crates/fastmcp/tests/trybuild/tool_unknown_attr.rs
// Tests that #[tool] with unknown attribute produces a compile error.

use fastmcp::tool;

#[tool(invalid_attr = "foo")]
fn my_tool() -> String {
    "ok".to_string()
}

fn main() {}
